--- a/Assignments/CRISPDM-SEMMA-KDD/CRISPDM/research_paper.tex
+++ b/Assignments/CRISPDM-SEMMA-KDD/CRISPDM/research_paper.tex
@@ -10,10 +10,10 @@
 \geometry{a4paper, margin=1in}
 
 \title{Predicting Building Energy Efficiency Using Machine Learning: A CRISP-DM Approach}
-\author{Your Name \\
-Data Analytics Research Group \\
+\author{Pruthvik Sheth \\
+San Jose State University\\
 Your Institution}
-\date{\today}
+\date{October 18, 2024}
 
 \begin{document}
 
